fix p aligns

--- a/_source/css/cacilhas.styl
+++ b/_source/css/cacilhas.styl
@@ -91,6 +91,12 @@ details[open] > summary:before
 .panel-body p
       text-align justify
 
+.text-center
+  text-align center !important
+
+.text-right
+  text-align right !important
+
 .mg-alert
   color $alert_color
 
